--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 <div class="quadroInicial"> 
     <div class="center">
         <h1 align="center">Aluguel e Compra de carro</h1>
-        <h1 align="center">com</h1>
+        <h1 align="center">Com</h1>
         <h1 align="center">Hyperledger</h1>
         <img class="displayed" src="../imagens/car.png" alt="Carro" width="230">
         <br>
@@ -22,7 +22,7 @@
 
 <div id="id01" class="modal">
   
-  <form class="modal-content animate" action="/action_page.php" method="post">
+  <form class="modal-content animate" action="catalogo.html" method="post">
 
     <div class="container">
         <br>
