add novas paginas

--- a/site/catalogo.html
+++ b/site/catalogo.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="style2.css" rel="stylesheet">
+<link href="styleCatalogo.css" rel="stylesheet">
 <link rel="SHORTCUT ICON" HREF="../imagens/carpequeno.png">
-<title>Segunda pagina</title>
+<title>Catalogo</title>
 </head>
 
 <body>
@@ -15,14 +15,14 @@
             <tr>
                 <th>ID</th>
                 <th>Modelo</th>
+                <th>Marca</th>
                 <th>Cor</th>
                 <th>Ano</th>
-                <th>Marca</th>
-                <th>Preço</th>
+                <th>Preco</th>
             </tr>
             </thead>
             <tbody>
-            <tr onclick="window.location='index.html'">
+            <tr onclick="window.location='compra.html'">
                 <td>cell1_1</td>
                 <td>cell2_1</td>
                 <td>cell3_1</td>
@@ -30,7 +30,7 @@
                 <td>cell5_1</td>
                 <td>cell6_1</td>
             </tr>
-            <tr onclick="window.location='index.html'">
+            <tr onclick="window.location='compra.html'">
                 <td>cell1_2</td>
                 <td>cell2_2</td>
                 <td>cell3_2</td>
@@ -38,7 +38,7 @@
                 <td>cell5_2</td>
                 <td>cell6_2</td>
             </tr>
-            <tr onclick="window.location='index.html'">
+            <tr onclick="window.location='compra.html'">
                 <td>cell1_3</td>
                 <td>cell2_3</td>
                 <td>cell3_3</td>
@@ -46,7 +46,7 @@
                 <td>cell5_3</td>
                 <td>cell6_3</td>
             </tr>
-            <tr onclick="window.location='index.html'">
+            <tr onclick="window.location='compra.html'">
                 <td>cell1_4</td>
                 <td>cell2_4</td>
                 <td>cell3_4</td>
@@ -54,7 +54,7 @@
                 <td>cell5_4</td>
                 <td>cell6_4</td>
             </tr>
-            <tr onclick="window.location='index.html'">
+            <tr onclick="window.location='compra.html'">
                 <td>cell1_5</td>
                 <td>cell2_5</td>
                 <td>cell3_5</td>
