--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="style.css" rel="stylesheet">
+<link href="styleIndex.css" rel="stylesheet">
 <link rel="SHORTCUT ICON" HREF="../imagens/carpequeno.png">
 <title>Aluguel/Venda de carros</title>
 </head>
